# staticaml

./: .gitignore  .ocamlformat  README.MD  dune-project  staticaml.opam
lib/: dune  statistics.ml  utils.ml
