(lang dune 3.17)

(name staticaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Sheol27")

(maintainers "Sheol27")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name staticaml)
 (synopsis "Statistics in OCaml")
 (description "Naive implementation of statistics concepts in OCaml")
 (depends ocaml)
 )
